# ChangeLog for app-misc/strigi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/strigi/ChangeLog,v 1.46 2009/12/27 17:20:31 armin76 Exp $

  27 Dec 2009; Raúl Porcel <armin76@gentoo.org> strigi-0.6.5.ebuild,
  strigi-0.7.0.ebuild:
  Add ~arm

  27 Dec 2009; Raúl Porcel <armin76@gentoo.org> strigi-0.7.0.ebuild:
  alpha/ia64/sparc stable

  10 Dec 2009; Jonathan Callen <abcd@gentoo.org> strigi-0.7.0.ebuild:
  Fix typo

  10 Dec 2009; Jonathan Callen <abcd@gentoo.org> strigi-0.6.5.ebuild,
  strigi-0.7.0.ebuild:
  Convert mycmakeargs to an array (required due to usage in src_test)

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> strigi-0.7.0.ebuild:
  Marked ppc/ppc64 stable.

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org> strigi-0.7.0.ebuild:
  Add ~sparc

  17 Oct 2009; Markus Meier <maekke@gentoo.org> strigi-0.7.0.ebuild:
  x86 stable, bug #287694

  09 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> strigi-0.7.0.ebuild:
  amd64 stable wrt #287694

*strigi-0.7.0 (20 Aug 2009)

  20 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org> -strigi-0.6.4.ebuild,
  +strigi-0.7.0.ebuild:
  Version bump. Remove old.

  18 May 2009; Tomas Chvatal <scarabeus@gentoo.org> strigi-0.6.5.ebuild,
  +files/strigi-0.6.5-gcc4.4-missing-headers.patch:
  Apply gcc 4.4 fix. Per bug #270267.

  18 May 2009; Tomas Chvatal <scarabeus@gentoo.org> strigi-0.6.5.ebuild,
  +files/strigi-disable_java.patch:
  Apply java disabling patch. Per bug #257103. Thx to Igor Ulyanov.

  14 May 2009; Tomas Chvatal <scarabeus@gentoo.org> +strigi-0.6.5.ebuild:
  Clean up deps a bit.

*strigi-0.6.5 (14 May 2009)

  14 May 2009; Tomas Chvatal <scarabeus@gentoo.org> +strigi-0.6.5.ebuild:
  Version bump. Per bug #269872.

  11 Apr 2009; Raúl Porcel <armin76@gentoo.org> strigi-0.6.4.ebuild:
  Add ~alpha/~ia64

  11 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org>
  -files/strigi-0.5.8-gcc-4.3.patch, strigi-0.6.4.ebuild: